@@ -3,6 +3,9 @@ lldpd (0.9.1)
     + Rework packaging for OS X to make it work with El Capitan. To
       simplify a bit, it is not possible anymore to build fat
       binaries. Latest version of OS X supporting 32bit was 10.6.
+  * Fix:
+    + By default, when using port alias as description, use port name
+      as port ID.
 
 lldpd (0.9.0)
   * Change:
